Fix whitespace

--- a/src/components/Content/Content.module.css
+++ b/src/components/Content/Content.module.css
@@ -100,7 +100,7 @@
     align-items: center;
     background-color: var(--background-color);
     color: var(--text-color);
-    padding: 30px;
+    padding: 30px 20px;
 }
 
 @media (min-width: 1024px) {
